0025964: Visualization, TKOpenGl - compile RayTracing shader without texturing when no textures in use